<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_clientes"
            android:icon="@drawable/icono_clientes"
            android:title="@string/navClientes" />
        <item
            android:id="@+id/nav_prestamos"
            android:icon="@drawable/icono_prestamo"
            android:title="@string/navPrestamos" />
        <item
            android:id="@+id/nav_pagos"
            android:icon="@drawable/icono_pago"
            android:title="@string/navPagos" />
        <item
            android:id="@+id/nav_usuarios"
            android:icon="@drawable/icono_usuario"
            android:title="@string/navUsuarios" />
        <item
            android:id="@+id/nav_configuracion"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/navConfiguracion" />

        <item
            android:id="@+id/nav_cerrarSesion"
            android:icon="@drawable/ic_exit_to_app_black_24dp"
            android:title="@string/navCerrarSesion" />
    </group>
</menu>
