<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_clientes">

    <fragment
        android:id="@+id/nav_clientes"
        android:name="com.clases.rd.ui.Clientes.ClientesFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_clientes" />

    <fragment
        android:id="@+id/nav_prestamos"
        android:name="com.clases.rd.ui.prestamos.PrestamosFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_prestamos" />

    <fragment
        android:id="@+id/nav_pagos"
        android:name="com.clases.rd.ui.cobros.CobrosFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_pagos" />

    <fragment
        android:id="@+id/nav_usuarios"
        android:name="com.clases.rd.ui.usuarios.UsuarioFragment"
        android:label="@string/menu_tools"
        tools:layout="@layout/fragment_usuario" />

    <fragment
        android:id="@+id/nav_configuracion"
        android:name="com.clases.rd.ui.configuracion.ConfiguracionFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/fragment_share" />

    <fragment
        android:id="@+id/nav_logoff"
        android:name="com.clases.rd.ui.loggOff.CerrarSesionFragment"
        android:label="@string/menu_send"
        tools:layout="@layout/fragment_configracion" />
</navigation>