<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RadioButton
        android:id="@+id/rdbFemenino"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/femenino"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.364"
        app:layout_constraintStart_toEndOf="@+id/rdbYear"
        app:layout_constraintTop_toTopOf="@+id/textViewSexo" />

    <EditText
        android:id="@+id/txtapellidoCliente"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="104dp"
        android:ems="10"
        android:hint="@string/apellidos"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textColorHint="@android:color/background_dark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/text_share" />

    <EditText
        android:id="@+id/txtcedulaCliente"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="172dp"
        android:ems="10"
        android:hint="@string/cedula"
        android:importantForAutofill="no"
        android:inputType="number"
        android:maxLength="11"
        android:textColorHint="@android:color/background_dark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/text_share" />

    <EditText
        android:id="@+id/txtTelefonoCliente"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="240dp"
        android:ems="10"
        android:hint="@string/telefono"
        android:importantForAutofill="no"
        android:maxLength="12"
        android:inputType="number"
        android:textColorHint="@android:color/background_dark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/text_share" />

    <TextView
        android:id="@+id/text_share"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/navClientes"
        android:textAlignment="center"
        android:textColor="@android:color/background_dark"
        android:textSize="20sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewSexo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="292dp"
        android:layout_marginEnd="8dp"
        android:text="@string/Sexo"
        android:textAlignment="center"
        android:textColor="@android:color/background_dark"
        android:textSize="20sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txtNombreCliente"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:hint="@string/nombre"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textColorHint="@android:color/background_dark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/text_share" />

    <EditText
        android:id="@+id/txtDireccionCliente"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="384dp"
        android:ems="10"
        android:hint="@string/Direccion"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textColorHint="@android:color/background_dark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/text_share" />

    <RadioButton
        android:id="@+id/rdbYear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="72dp"
        android:layout_marginTop="40dp"
        android:text="@string/masculino"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textViewSexo" />

    <View
        android:id="@+id/divider"
        android:layout_width="409dp"
        android:layout_height="1dp"
        android:layout_marginTop="44dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/rdbYear" />

    <Button
        android:id="@+id/btnProcesarAddCLiente"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="66dp"
        android:background="@drawable/stylebtn"
        android:text="@string/procesar"
        android:textColor="@android:color/background_light"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/txtDireccionCliente" />

</androidx.constraintlayout.widget.ConstraintLayout>