<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btnCalcularPrestamo"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="56dp"
            android:background="@drawable/stylebtn"
            android:text="@string/calcularPrestamo"
            android:textColor="@android:color/background_light"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btnProcesarPrestamo"
            app:layout_constraintHorizontal_bias="0.506"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/txtMontoFinal" />

        <EditText
            android:id="@+id/txtTotalintereses"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:ems="10"
            android:hint="@string/totalIntereses"
            android:importantForAutofill="no"
            android:inputType="number"
            android:textColorHint="@android:color/background_dark"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/txtCantCuotas" />

        <EditText
            android:id="@+id/txtMontoFinal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="116dp"
            android:ems="10"
            android:hint="@string/montoFinal"
            android:importantForAutofill="no"
            android:inputType="number"
            android:textColorHint="@android:color/background_dark"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/txtCantCuotas" />

        <RadioButton
            android:id="@+id/rdbMeses"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="124dp"
            android:layout_marginTop="104dp"
            android:text="@string/meses"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/txtInteresPrestamo" />

        <EditText
            android:id="@+id/txtMontoPrestamoPorPagar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="164dp"
            android:ems="10"
            android:hint="@string/monto"
            android:importantForAutofill="no"
            android:inputType="number|numberDecimal"
            android:textColorHint="@android:color/background_dark"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/text_share" />

        <EditText
            android:id="@+id/txtNombreCliente"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="104dp"
            android:ems="10"
            android:hint="@string/nombre"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:textColorHint="@android:color/background_dark"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.494"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/text_share" />

        <EditText
            android:id="@+id/txtPlazoArmotizacion"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="276dp"
            android:ems="10"
            android:hint="@string/plazoAmortizacion"
            android:importantForAutofill="no"
            android:inputType="number"
            android:textColorHint="@android:color/background_dark"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/text_share" />

        <RadioButton
            android:id="@+id/rdbYear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:text="@string/year"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.187"
            app:layout_constraintStart_toEndOf="@+id/rdbMeses"
            app:layout_constraintTop_toTopOf="@+id/txtPlazoArmotizacion" />

        <EditText
            android:id="@+id/txtInteresPrestamo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="220dp"
            android:ems="10"
            android:hint="@string/interes"
            android:importantForAutofill="no"
            android:inputType="number|numberDecimal"
            android:textColorHint="@android:color/background_dark"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/text_share" />

        <EditText
            android:id="@+id/txtCantCuotas"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="356dp"
            android:ems="10"
            android:hint="@string/cuotas"
            android:importantForAutofill="no"
            android:inputType="number|numberDecimal"
            android:textColorHint="@android:color/background_dark"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/text_share" />

        <TextView
            android:id="@+id/text_share"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/navPrestamos"
            android:textAlignment="center"
            android:textColor="@android:color/background_dark"
            android:textSize="20sp"
            android:textStyle="bold|italic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/txtidCliente"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:ems="10"
            android:hint="@string/clientePrestamo"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:textColorHint="@android:color/background_dark"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/text_share" />

        <Button
            android:id="@+id/btnProcesarPrestamo"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="56dp"
            android:layout_marginEnd="84dp"
            android:background="@drawable/stylebtn"
            android:text="@string/procesar"
            android:textColor="@android:color/background_light"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/txtMontoFinal" />

        <ImageButton
            android:id="@+id/btnConsulartIDCliente"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="224dp"
            android:layout_marginTop="40dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.25"
            app:layout_constraintStart_toStartOf="@+id/txtidCliente"
            app:layout_constraintTop_toTopOf="@+id/text_share"
            app:srcCompat="@drawable/ic_search_black_24dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>


