<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/linearLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/text_share"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:text="@string/navUsuarios"
        android:textAlignment="center"
        android:textColor="@android:color/background_dark"
        android:textSize="20sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <EditText
        android:id="@+id/txtPasswordUsuarioFast"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:ems="10"
        android:hint="@string/PasswordUsuario"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:textColorHint="@android:color/background_dark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/txtTelefonoUsuarioFast" />

    <EditText
        android:id="@+id/txtTelefonoUsuarioFast"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="43dp"
        android:ems="10"
        android:hint="@string/telefono"
        android:importantForAutofill="no"
        android:inputType="number"
        android:maxLength="11"
        android:textColorHint="@android:color/background_dark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/text_share" />

    <EditText
        android:id="@+id/txtUserNameFast"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="104dp"
        android:ems="10"
        android:hint="@string/nombre"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textColorHint="@android:color/background_dark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/text_share" />

    <EditText
        android:id="@+id/txtlastNameFast"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="73dp"
        android:ems="10"
        android:hint="@string/apellidos"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textColorHint="@android:color/background_dark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/txtUserNameFast" />

</androidx.constraintlayout.widget.ConstraintLayout>
