<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="1"
    android:background="#283246">

    <TextView
        android:id="@+id/texto_olvidaste_contrasena2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="144dp"
        android:gravity="center_vertical"
        android:onClick="registrarUsuarioFast"
        android:text="@string/registro"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@android:color/background_light"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/boton_iniciar_sesion" />

    <EditText
        android:id="@+id/txtTelefonoUsuarioAcc"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorPrimary"
        android:hint="@string/telefono"
        android:importantForAutofill="no"
        android:inputType="number"
        android:singleLine="true"
        android:textColor="@android:color/background_light"
        android:textColorHint="@android:color/background_light"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/txtPasswordUsuarioAcc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.521"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.866" />

    <EditText
        android:id="@+id/txtPasswordUsuarioAcc"
        android:layout_width="250dp"
        android:layout_height="45dp"
        android:layout_marginTop="292dp"
        android:backgroundTint="@color/colorPrimary"
        android:ems="10"
        android:hint="@string/Contraseña"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:textColor="@android:color/background_light"
        android:textColorHint="@android:color/background_light"
        android:textCursorDrawable="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.521"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:buttonTint="@color/azul_linea"

        android:text="@string/recordarUsuario"
        android:textColor="@android:color/background_light"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.33"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/txtPasswordUsuarioAcc" />

    <Button
        android:id="@+id/boton_iniciar_sesion"
        android:layout_width="200dp"
        android:layout_height="48dp"
        android:layout_marginTop="56dp"
        android:background="@drawable/stylebtn"
        android:onClick="validarAcceso"
        android:text="@string/Acceder"
        android:textAlignment="center"
        android:textColor="@android:color/background_light"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/checkBox" />

    <TextView
        android:id="@+id/texto_olvidaste_contrasena"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:gravity="center_vertical"
        android:onClick="mostrarRecupararPassword"
        android:text="@string/RecoverPassword"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@android:color/background_light"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.515"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/boton_iniciar_sesion" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="330dp"
        android:layout_height="106dp"
        android:layout_marginTop="96dp"
        android:fontFamily="@font/aref_ruqaa"
        android:text="@string/fpaymentt"
        android:textAlignment="center"
        android:textColor="@android:color/background_light"
        android:textSize="55sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>